--- a/langserve-app/pyproject.toml
+++ b/langserve-app/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.11,<3.13"
 uvicorn = "^0.23.2"
 langserve = {extras = ["server"], version = ">=0.0.30"}
 pydantic = "<2"
@@ -17,6 +17,7 @@ tiktoken = ">=0.5.1"
 pinecone-client = ">=2.2.4"
 beautifulsoup4 = "^4.12.2"
 langchain-text-splitters = ">=0.0.1,<0.1"
+langchain-pinecone = ">=0.0.3,<0.1"
 rag-conversation = {path = "packages/rag-conversation", develop = true}
 extraction-openai-functions = {path = "packages/extraction-openai-functions", develop = true}
 openai-functions-agent = {path = "packages/openai-functions-agent", develop = true}
@@ -24,9 +25,9 @@ anthropic-iterative-search = {path = "packages/anthropic-iterative-search", deve
 gemini-functions-agent = {path = "packages/gemini-functions-agent", develop = true}
 openai-functions-tool-retrieval-agent = {path = "packages/openai-functions-tool-retrieval-agent", develop = true}
 simple-chain = {path = "packages/simple-chain", develop = true}
-dag-chain = {path = "packages/dag-chain", develop = true}
 simple-tool-agent = {path = "packages/simple-tool-agent", develop = true}
-tagging-chian = {path = "packages/tagging-chian", develop = true}
+dag-chain = {path = "packages/dag-chain", develop = true}
+tagging-chain = {path = "packages/tagging-chain", develop = true}
 
 [tool.poetry.group.dev.dependencies]
 langchain-cli = ">=0.0.15"
