--- a/langserve-app/pyproject.toml
+++ b/langserve-app/pyproject.toml
@@ -18,6 +18,8 @@ pinecone-client = ">=2.2.4"
 beautifulsoup4 = "^4.12.2"
 langchain-text-splitters = ">=0.0.1,<0.1"
 langchain-pinecone = ">=0.0.3,<0.1"
+grandalf = ">=0.7.0,<0.8"
+pyparsing = ">=3.0.9,<4"
 rag-conversation = {path = "packages/rag-conversation", develop = true}
 extraction-openai-functions = {path = "packages/extraction-openai-functions", develop = true}
 openai-functions-agent = {path = "packages/openai-functions-agent", develop = true}
